--- a/index.html
+++ b/index.html
@@ -2,40 +2,41 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Everdina Petronela Bernarda - Rouwbegeleiding</title>
+    <title>Aandacht Bij Rouw</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Google Fonts for better typography -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <aside class="sidebar">
-            <div class="sidebar-header">
-                <h2>Everdina Bernarda</h2>
-                <p>Rouw- en Verliesbegeleiding</p>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#" data-content="home" class="active">Home</a></li>
-                    <li><a href="#" data-content="overmij">Over Mij</a></li>
-                    <li><a href="#" data-content="opleidingen">Opleidingen</a></li>
-                    <li><a href="#" data-content="cursussen">Cursussen & Trainingen</a></li>
-                    <li><a href="#" data-content="werkervaring">Werkervaring</a></li>
-                    <li><a href="#" data-content="tarieven">Tarieven</a></li>
-                </ul>
-            </nav>
-        </aside>
-        <main class="main-content" id="main-content">
-            <!-- Dynamically injected content -->
-        </main>
-    </div>
+    <!-- Navigation Menu -->
+    <header>
+        <div id="title">
+            <img src="images/aandacht.jpg" alt="Eva Logo">
+        </div>
+        <nav id="navbar">
+            <a href="#home">Home</a>
+            <a href="#overmij">Over Eva</a>
+            <a href="#cursussen">Cursussen</a>
+            <a href="#werkervaring">Werkervaring</a>
+            <a href="#opleidingen">Opleidingen</a>
+            <a href="#tarieven">Tarieven</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <!-- Sections -->
+    <section id="home"></section>
+    <section id="overmij"></section>
+    <section id="cursussen"></section>
+    <section id="werkervaring"></section>
+    <section id="opleidingen"></section>
+    <section id="tarieven"></section>
+    <section id="contact"></section>
 
     <footer>
-        <p>&copy; 2024 Everdina Petronela Bernarda. Alle rechten voorbehouden.</p>
+        <p>&copy; @2024 Aandacht Bij Rouw.</p>
     </footer>
 
+    <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
