--- a/index.html
+++ b/index.html
@@ -8,35 +8,114 @@
 </head>
 <body>
     <!-- Navigation Menu -->
-    <header>
-        <div id="title">
-            <img src="images/aandacht.jpg" alt="Eva Logo">
-        </div>
+    <header id="top-header">
+        <img src="images/aandacht.jpg" alt="Eva Logo">
         <nav id="navbar">
             <a href="#home">Home</a>
-            <a href="#overmij">Over Eva</a>
+            <a href="#overeva">Over-Eva</a>
             <a href="#cursussen">Cursussen</a>
-            <a href="#werkervaring">Werkervaring</a>
-            <a href="#opleidingen">Opleidingen</a>
+            <a href="#werkervaring">Werkervaring&Opleidingen</a>
             <a href="#tarieven">Tarieven</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
 
     <!-- Sections -->
-    <section id="home"></section>
-    <section id="overmij"></section>
-    <section id="cursussen"></section>
-    <section id="werkervaring"></section>
-    <section id="opleidingen"></section>
-    <section id="tarieven"></section>
-    <section id="contact"></section>
+    <section id="home">
+        <img src="images/small-logo.jpg" alt="Small Logo">
+        <div class="home-content">
+            <p>“Rouwen doe je zelf, maar je hoeft het niet alleen te doen”<br>
+            Iedereen krijgt in het leven te maken met verlies en rouw, ook al wil je er het liefst van wegblijven. Maar dit is helaas onvermijdelijk. We maken allemaal verliessituaties op verschillende gebieden mee, die het leven volledig op de kop kunnen zetten. En dan is het hard werken (rouwarbeid) om weer in balans te komen. Het is een proces van leren omgaan met de nieuwe werkelijkheid. Het vraagt erom dat je met het verlies leert om te gaan en stap voor stap deel van je leven laat worden.</p>
+            <h3>Werkwijze</h3>
+            <p>Ik begeleid volwassenen bij rouw en verlies. Of het nu gaat om rouw omdat je een dierbare bent verloren, rouw bij levend verlies, rouw om verlies van gezondheid of baan, ieder rouwproces is uniek. Ik werk daarom ook niet volgens een vastomlijnd traject voor rouwverwerking maar kijk naar jouw specifieke situatie en behoefte.<br>
+            De focus ligt op een gezond rouwproces en dat betekent dat er een "slingerbeweging" is tussen enerzijds bezig zijn met verlies en anderzijds met herstel en jezelf aanpassen aan een nieuwe werkelijkheid; dit wordt het duale proces genoemd.<br>
+            Vanuit deze focus biedt ik een traject op maat waarbij ik kan putten uit diverse werkvormen waaronder.</p>
+            <h3>PAK</h3>
+            <p>Een mooi instrument is de ‘Persoonlijke Archiefkast’, een kast met allemaal kleine laatjes. Het is een metafoor voor het leven, voor ieder verlies een laatje. Het laat zien wat er allemaal gebeurd is én wat er nog moet gebeuren om weer rust te brengen in de kast. Samen scheppen we structuur in de chaos.</p>
+            <h3>Systemisch werken</h3>
+            <p>Levensvragen kun je niet loskoppelen van wat generaties lang is doorgegeven. Met deze methodiek maken we situaties inzichtelijk. Het kan emotioneel beladen onderwerpen zichtbaar en bespreekbaar maken.<br>
+            Tijdens onze gesprekken heb ik aandacht voor jouw verdriet en verlies, maar heb ook aandacht voor je copingmechanisme (gedragspatronen) en zelfzorg. Ik geef je inzichten in jouw rouwproces en zal je handvatten aanreiken met als doel, dat je weer kracht en blijheid kunt voelen, zodat je weer door kunt gaan met je leven en het verlies hierin kan verweven. In onze sessies bepaal jij je behoefte, het tempo en waar je het over wilt hebben. Elke sessie weer. Ik luister, zonder oordeel, met respect en met aandacht voor jouw verhaal.<br>
+            Bij voorkeur loop ik met je de natuur in. Wandelen zet je niet alleen fysiek in beweging, ook mentaal. Er komt een stof endorfine vrij, dat een positiever gevoel geeft. Letterlijk loop ik even samen met je door het leven. Vragen en antwoorden komen dan meestal als vanzelf. De natuur heeft en geeft ordening en rust. Mocht je niet willen wandelen dan heb ik een fijne ruimte waar we kunnen werken.</p>
+            <h3>Rouw in de context van werk</h3>
+            <p>Aandacht voor de medewerkers en leidinggevende bij rouw en verlies, is erg belangrijk. Door goede begeleiding op maat kan terugkeer in het werk sneller en natuurlijker verlopen. Goede ondersteuning voorkomt uitval of verzuim. Want het verzuim kan enorm zijn. In praktijk zie je vooral uitval na verlies van een partner of kind. Eén op de tien mensen belandt op zo’n moment in een burn-out. Wat kun je als werkgever doen om een werknemer te begeleiden in het rouwproces? Voor medewerkers die een groot verlies hebben doorgemaakt bied ik ondersteuning en begeleid ik ze bij terugkeer op de werkvloer. Het is belangrijk om je te realiseren dat mensen verdriet door een verlies niet thuis kunnen laten, dit neem je ook mee naar je werk.<br>
+            Begeleiding op maat voorkomt chronisch verzuim bij medewerkers, verhoogt het gevoel van loyaliteit en verantwoordelijkheid naar de organisatie en draagt bij aan duurzame inzetbaarheid.</p>
+        </div>
+    </section>
+
+    <section id="overeva">
+        <h2>Over Eva</h2>
+        <div class="overeva-content">
+            <p>De reden dat ik voor dit mooie vak heb gekozen, is vooral gemotiveerd door mijn persoonlijke achtergrond. Verlies loopt als een rode draad door mijn leven.<br>
+            Het heeft lang geduurd voor ik besefte dat mijn onvermogen om me te hechten in een relatie verband hield met het verlies van mijn ouders op jonge leeftijd. In mijn kindertijd voelde ik me vaak alleen, zonder dat iemand me steunde of hielp in moeilijke tijden. Toen ik twaalf was, verloor ik mijn moeder, en twaalf jaar later mijn vader.</p>
+            <img src="images/eva-front.jpeg" alt="Eva Front">
+            <p>In relaties voelde ik een onbewuste drang om mensen op afstand te houden. Ik verlangde wel naar verbinding, maar zodra iemand dichterbij kwam, sloot ik mezelf af, alsof ik een onzichtbare muur optrok. Jarenlang dacht ik dat dit gewoon 'mijn manier van zijn' was, of dat ik de juiste persoon nog niet had ontmoet. Maar toen de zoveelste relatie op de klippen liep omdat ik emotioneel onbereikbaar bleef, besloot ik hulp te zoeken.<br>
+            Langzaam begon ik te begrijpen dat mijn verleden me onbewust had gevormd. Het verlies van mijn ouders had me de boodschap meegegeven dat hechten gelijkstond aan pijn en verlies. Door niemand echt toe te laten, beschermde ik mezelf tegen de pijn van het verlies dat ik zo diep had gevoeld.<br>
+            Dit inzicht veranderde de manier waarop ik mezelf zag. Ik begon te werken aan het herkennen en afbreken van de muur die ik jarenlang om me heen had gebouwd. Het was niet eenvoudig, maar stap voor stap leerde ik mensen dichterbij te laten komen. Het heeft me geholpen in mijn helingsproces, en hoewel het soms nog lastig is, lukt het me steeds vaker om oprecht verbinding te maken.</p>
+        </div>
+    </section>
+
+    <section id="cursussen">
+        <h2>Cursussen</h2>
+        <div class="cursussen-content">
+            <p>
+                &bull; Cursus systemisch werken bij rouw en verlies<br>
+                &bull; Deelnemer netwerkgroep Kanker & Werk (HAN)<br>
+                &bull; Workshop Training acteur<br>
+                &bull; Training Organisatiecoach<br>
+                &bull; Training Oplossingsgericht coachen
+            </p>
+            <img src="images/office-room.jpeg" alt="Kantoorruimte voor rouwbegeleiding">
+        </div>
+    </section>
+
+    <section id="werkervaring">
+        <h2>Werkervaring & Opleidingen</h2>
+        <div class="werkervaring-content">
+            <p>
+                &bull; Preventiecoach<br>
+                &bull; Verzuimadviseur/ Casemanager<br>
+                &bull; Trainer kanker & werk<br>
+                &bull; Coaching bij kanker op het werk<br>
+                &bull; Loopbaan-Adviseur<br>
+                &bull; Re-integratiecoach
+            </p>
+            <p>
+                &bull; Post HBO Opleiding Rouw en Verliesbegeleiding<br>
+                &bull; Post HBO Loopbaanadvies<br>
+                &bull; Post HBO Mediation<br>
+                &bull; Post HBO Casemanagement
+            </p>
+        </div>
+        <img src="images/eva-back.jpeg" alt="Eva Back">
+    </section>
+
+    <section id="tarieven">
+        <h2>Tarieven</h2>
+        <div class="tarieven-content">
+            <h3>Tarieven Particulieren en ZZP'ers</h3>
+            <p>Telefonisch kennismakingsgesprek is gratis en vrijblijvend.<br>
+                &bull; Rouwbegeleiding consult (75 minuten) is € 85,--<br>
+                &bull; Rouwbegeleiding met partner en/of gezin (90 minuten) is € 125,--
+            </p>
+            <h3>Zakelijke Tarieven via Werk/Uitkeringsinstantie</h3>
+            <p>Telefonisch kennismakingsgesprek is gratis en vrijblijvend.<br>
+                &bull; Rouwbegeleiding consult (75 minuten) is € 105,-- exclusief BTW
+            </p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <div class="contact-content">
+            <p>email: <strong>evageven@aandachtbijrouw.nl</strong><br>
+               Telefoon: <strong>0625515986</strong>
+            </p>
+        </div>
+    </section>
 
     <footer>
-        <p>&copy; @2024 Aandacht Bij Rouw.</p>
+        <p>@2024 Aandacht Bij Rouw.</p>
     </footer>
 
-    <!-- JavaScript -->
-    <script src="script.js"></script>
 </body>
 </html>
