--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
         <h2>Contact</h2>
         <div class="contact-content">
             <p>email: <strong>evageven@aandachtbijrouw.nl</strong><br>
-               Telefoon: <strong>0625515986</strong>
+               Telefoon: <strong>0625515986</strong><br>
+               Adres: <strong>Oosterstraat 1, 3742 SK Baarn</strong>
             </p>
         </div>
     </section>
