--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="contact-content">
             <p>email: <strong>evageven@aandachtbijrouw.nl</strong><br>
                Telefoon: <strong>0625515986</strong><br>
-               Adres: <strong>Oosterstraat 1, 3742 SK Baarn</strong>
+               Adres: <strong>Oosterstraat 1f, 3742 SK Baarn</strong>
             </p>
         </div>
     </section>
