Add main.js file
Add correct year to the footer

--- a/index.html
+++ b/index.html
@@ -115,8 +115,12 @@
     </section>
 
     <footer>
-        <p>@2024 Aandacht Bij Rouw.</p>
+        <p>
+            &copy; <span id="yearSpan"></span> Aandacht Bij Rouw. All rights reserved.
+          </p>
     </footer>
 
+    <!-- Link to external JS file -->
+    <script src="./main.js"></script>
 </body>
 </html>
