--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="nl" style="scroll-behavior: smooth;">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +8,12 @@
 </head>
 <body>
   <!-- Navigation Menu -->
-  <header id="top-header">
-    <img src="images/aandacht.jpg" alt="Eva Logo">
-    <nav id="navbar">
+  <nav id="navbar">
+    <!-- Logo -->
+    <a href="">
+      <img src="images/aandacht.jpg" alt="Eva Logo" />
+    </a>
+    <div id="navbar-text">
       <a href="#home">Home</a>
       <a href="#overeva">Over-Eva</a>
       <a href="#cursussen">Cursussen</a>
@@ -18,7 +21,7 @@
       <a href="#tarieven">Tarieven</a>
       <a href="#contact">Contact</a>
     </nav>
-  </header>
+  </nav>
 
   <!-- Sections -->
   <section id="home">
