footer: combine section with footer

--- a/index.html
+++ b/index.html
@@ -107,20 +107,17 @@
     </div>
   </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <div class="contact-content">
-      <p>email: <strong>evageven@aandachtbijrouw.nl</strong><br>
-         Telefoon: <strong>0625515986</strong><br>
-         Adres: <strong>Oosterstraat 1f, 3742 SK Baarn</strong>
+  <footer id="contact">
+    <p>email: <strong>evageven@aandachtbijrouw.nl</strong><br>
+       Telefoon: <strong>0625515986</strong><br>
+       Adres: <strong>Oosterstraat 1f, 3742 SK Baarn</strong>
+    </p>
+
+    <div id="footer-text">
+      <p>
+        &copy; <span id="yearSpan"></span> Aandacht Bij Rouw. All rights reserved.
       </p>
     </div>
-  </section>
-
-  <footer>
-    <p>
-      &copy; <span id="yearSpan"></span> Aandacht Bij Rouw. All rights reserved.
-      </p>
   </footer>
 
   <!-- Link to external JS file -->
