Add article element

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
       <a href="#werkervaring">Werkervaring&Opleidingen</a>
       <a href="#tarieven">Tarieven</a>
       <a href="#contact">Contact</a>
-    </nav>
+    </div>
   </nav>
 
   <!-- Sections -->
   <section id="home">
-    <img src="images/small-logo.jpg" alt="Small Logo">
-    <div class="home-content">
+    <article id="home-content">
+      <img src="images/small-logo.jpg" alt="Small Logo">
+
       <p>“Rouwen doe je zelf, maar je hoeft het niet alleen te doen”<br>
       Iedereen krijgt in het leven te maken met verlies en rouw, ook al wil je er het liefst van wegblijven. Maar dit is helaas onvermijdelijk. We maken allemaal verliessituaties op verschillende gebieden mee, die het leven volledig op de kop kunnen zetten. En dan is het hard werken (rouwarbeid) om weer in balans te komen. Het is een proces van leren omgaan met de nieuwe werkelijkheid. Het vraagt erom dat je met het verlies leert om te gaan en stap voor stap deel van je leven laat worden.</p>
       <h3>Werkwijze</h3>
@@ -42,24 +43,26 @@
       <h3>Rouw in de context van werk</h3>
       <p>Aandacht voor de medewerkers en leidinggevende bij rouw en verlies, is erg belangrijk. Door goede begeleiding op maat kan terugkeer in het werk sneller en natuurlijker verlopen. Goede ondersteuning voorkomt uitval of verzuim. Want het verzuim kan enorm zijn. In praktijk zie je vooral uitval na verlies van een partner of kind. Eén op de tien mensen belandt op zo’n moment in een burn-out. Wat kun je als werkgever doen om een werknemer te begeleiden in het rouwproces? Voor medewerkers die een groot verlies hebben doorgemaakt bied ik ondersteuning en begeleid ik ze bij terugkeer op de werkvloer. Het is belangrijk om je te realiseren dat mensen verdriet door een verlies niet thuis kunnen laten, dit neem je ook mee naar je werk.<br>
       Begeleiding op maat voorkomt chronisch verzuim bij medewerkers, verhoogt het gevoel van loyaliteit en verantwoordelijkheid naar de organisatie en draagt bij aan duurzame inzetbaarheid.</p>
-    </div>
+    </article>
   </section>
 
   <section id="overeva">
     <h2>Over Eva</h2>
-    <div class="overeva-content">
+
+    <article id="overeva-content">
       <p>De reden dat ik voor dit mooie vak heb gekozen, is vooral gemotiveerd door mijn persoonlijke achtergrond. Verlies loopt als een rode draad door mijn leven.<br>
       Het heeft lang geduurd voor ik besefte dat mijn onvermogen om me te hechten in een relatie verband hield met het verlies van mijn ouders op jonge leeftijd. In mijn kindertijd voelde ik me vaak alleen, zonder dat iemand me steunde of hielp in moeilijke tijden. Toen ik twaalf was, verloor ik mijn moeder, en twaalf jaar later mijn vader.</p>
       <img src="images/eva-front.jpeg" alt="Eva Front">
       <p>In relaties voelde ik een onbewuste drang om mensen op afstand te houden. Ik verlangde wel naar verbinding, maar zodra iemand dichterbij kwam, sloot ik mezelf af, alsof ik een onzichtbare muur optrok. Jarenlang dacht ik dat dit gewoon 'mijn manier van zijn' was, of dat ik de juiste persoon nog niet had ontmoet. Maar toen de zoveelste relatie op de klippen liep omdat ik emotioneel onbereikbaar bleef, besloot ik hulp te zoeken.<br>
       Langzaam begon ik te begrijpen dat mijn verleden me onbewust had gevormd. Het verlies van mijn ouders had me de boodschap meegegeven dat hechten gelijkstond aan pijn en verlies. Door niemand echt toe te laten, beschermde ik mezelf tegen de pijn van het verlies dat ik zo diep had gevoeld.<br>
       Dit inzicht veranderde de manier waarop ik mezelf zag. Ik begon te werken aan het herkennen en afbreken van de muur die ik jarenlang om me heen had gebouwd. Het was niet eenvoudig, maar stap voor stap leerde ik mensen dichterbij te laten komen. Het heeft me geholpen in mijn helingsproces, en hoewel het soms nog lastig is, lukt het me steeds vaker om oprecht verbinding te maken.</p>
-    </div>
+    </article>
   </section>
 
   <section id="cursussen">
     <h2>Cursussen</h2>
-    <div class="cursussen-content">
+
+    <article id="cursussen-content">
       <p>
         &bull; Cursus systemisch werken bij rouw en verlies<br>
         &bull; Deelnemer netwerkgroep Kanker & Werk (HAN)<br>
@@ -68,12 +71,13 @@
         &bull; Training Oplossingsgericht coachen
       </p>
       <img src="images/office-room.jpeg" alt="Kantoorruimte voor rouwbegeleiding">
-    </div>
+    </article>
   </section>
 
   <section id="werkervaring">
     <h2>Werkervaring & Opleidingen</h2>
-    <div class="werkervaring-content">
+
+    <article id="werkervaring-content">
       <p>
         &bull; Preventiecoach<br>
         &bull; Verzuimadviseur/ Casemanager<br>
@@ -88,13 +92,15 @@
         &bull; Post HBO Mediation<br>
         &bull; Post HBO Casemanagement
       </p>
-    </div>
-    <img src="images/eva-back.jpeg" alt="Eva Back">
+
+      <img src="images/eva-back.jpeg" alt="Eva Back">
+    </article>
   </section>
 
   <section id="tarieven">
     <h2>Tarieven</h2>
-    <div class="tarieven-content">
+
+    <article id="tarieven-content">
       <h3>Tarieven Particulieren en ZZP'ers</h3>
       <p>Telefonisch kennismakingsgesprek is gratis en vrijblijvend.<br>
         &bull; Rouwbegeleiding consult (75 minuten) is € 85,--<br>
@@ -104,10 +110,12 @@
       <p>Telefonisch kennismakingsgesprek is gratis en vrijblijvend.<br>
         &bull; Rouwbegeleiding consult (75 minuten) is € 105,-- exclusief BTW
       </p>
-    </div>
+    </article>
   </section>
 
   <footer id="contact">
+    <h2>Contact</h2>
+
     <p>email: <strong>evageven@aandachtbijrouw.nl</strong><br>
        Telefoon: <strong>0625515986</strong><br>
        Adres: <strong>Oosterstraat 1f, 3742 SK Baarn</strong>
