smartphone view: add sidebar and hamburguer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
     </div>
   </nav>
 
+  <!-- Hamburger button (visible on smaller screens) -->
+  <div id="hamburger-button">
+    <button aria-label="Open Menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+  </div>
+
+  <!-- Sidebar (slides in on small screens when hamburger is clicked) -->
+  <div id="sidebar">
+    <a href="#home">Home</a>
+    <a href="#overeva">Over-Eva</a>
+    <a href="#cursussen">Cursussen</a>
+    <a href="#werkervaring">Werkervaring & Opleidingen</a>
+    <a href="#tarieven">Tarieven</a>
+    <a href="#contact">Contact</a>
+  </div>
+
   <!-- Sections -->
   <section id="home">
     <article id="home-content">
