--- a/index.html
+++ b/index.html
@@ -302,31 +302,53 @@
               <!-- Contact Info -->
               <div class="sm:w-2/3 sm:pr-8">
                 <h2 class="text-4xl font-serif">Contactinformatie</h2>
-                <div class="mt-6 mb-6 flex items-start gap-4">
-                  <div class="w-10 flex-shrink-0 text-3xl text-dark">
-                    <svg
-                      stroke="currentColor"
-                      fill="currentColor"
-                      stroke-width="0"
-                      viewBox="0 0 512 512"
-                      height="1em"
-                      width="1em"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"></path>
-                    </svg>
+
+                <div class="mt-6 mb-6 flex flex-col gap-6">
+                  <!-- Email Section -->
+                  <div class="flex items-start gap-4">
+                    <div class="w-10 flex-shrink-0 text-3xl text-dark">
+                      <svg
+                        stroke="currentColor"
+                        fill="currentColor"
+                        stroke-width="0"
+                        viewBox="0 0 512 512"
+                        height="1em"
+                        width="1em"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"></path>
+                      </svg>
+                    </div>
+                    <div>
+                      <h3 class="text-xl font-medium">Stuur mij een e-mail</h3>
+                      <p class="mt-1">Heeft u vragen? Stuur mij gerust een e-mail.</p>
+                      <a
+                        href="mailto:evageven@aandachtbijrouw.nl"
+                        target="_blank"
+                        rel="noreferrer"
+                        class="text-dark underline text-lg mt-1 block"
+                      >
+                        evageven@aandachtbijrouw.nl
+                      </a>
+                    </div>
                   </div>
-                  <div>
-                    <h3 class="text-xl font-medium">Stuur mij een e-mail</h3>
-                    <p class="mt-1">Heeft u vragen? Stuur mij gerust een e-mail.</p>
-                    <a
-                      href="mailto:evageven@aandachtbijrouw.nl"
-                      target="_blank"
-                      rel="noreferrer"
-                      class="text-dark underline text-lg mt-1 block"
-                    >
-                      evageven@aandachtbijrouw.nl
-                    </a>
+
+                  <!-- Phone Section -->
+                  <div class="flex items-start gap-4">
+                    <div class="w-10 flex-shrink-0 text-3xl text-dark">
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H5v2a9 9 0 009 9h2v-2a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2C9.716 22 2 14.284 2 5V5z" />
+                      </svg>
+                    </div>
+                    <div>
+                      <h3 class="text-xl font-medium">Bel mij gerust</h3>
+                      <a
+                        href="tel:0625515986"
+                        class="text-dark underline text-lg mt-1 block"
+                      >
+                        0625515986
+                      </a>
+                    </div>
                   </div>
                 </div>
 
